fix links, get assignment page ready for groups/fs view
sidenote: all elements have to be under an element with subcontent/content class otherwise the zindex/layouts get messed up

--- a/server/static/css/student.css
+++ b/server/static/css/student.css
@@ -394,6 +394,23 @@ header .logo {
       color:#FFF;
       text-decoration:none;
     }
+  .button-large {
+    background-color:#eee;
+    color: #999;
+    border-radius: 2em;
+    display: inline-block;
+    float: left;
+    margin: 1em 0 0 0;
+    padding: 1em 5em;
+    width: 100%;
+    font-size: 0.9em;
+    text-align: center;
+  }
+    .button-large:hover {
+      background-color:#666;
+      color:#FFF;
+      text-decoration:none;
+    }
 .invite-input {
   padding:0.5em;
   margin:1em 0;
